fix feed
